Fixed film selector on IE. Fixed find dealer results

--- a/themes/madx/src/assets/scss/templates/_film-selector.scss
+++ b/themes/madx/src/assets/scss/templates/_film-selector.scss
@@ -253,7 +253,6 @@
 		margin-top: 20px;
 
 		input{
-			padding: 22px 15px;
 			border-radius: 3px;
 			color: #818285;
 			background-color: #e5e6e6;
